--- a/index.html
+++ b/index.html
@@ -3,8 +3,34 @@
 <head>
 <title>Transaction Entry</title>
 <style>
-  body { font-family: Arial; max-width: 500px; margin: auto; }
-  input, select, button { width: 100%; padding: 8px; margin: 5px 0; }
+  body { font-family: Arial, sans-serif; max-width: 500px; margin: auto; background: #f7f7f7; padding: 20px; }
+  h2 { text-align: center; }
+  form { background: white; padding: 15px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+  label { font-weight: bold; display: block; margin-top: 10px; }
+  input, select, button {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  button {
+    background: #28a745;
+    color: white;
+    font-size: 16px;
+    margin-top: 15px;
+    cursor: pointer;
+    border: none;
+  }
+  button:hover {
+    background: #218838;
+  }
+  #status {
+    margin-top: 15px;
+    text-align: center;
+    font-weight: bold;
+  }
 </style>
 </head>
 <body>
@@ -44,38 +70,45 @@
 document.getElementById("transactionForm").addEventListener("submit", function(e) {
   e.preventDefault();
   
-  const type = this.type.value;
+  const form = this;
+  const type = form.type.value;
   let debitValue = "";
   let creditValue = "";
   
   if (type === "Debit") {
-    debitValue = this.amount.value;
+    debitValue = form.amount.value;
   } else if (type === "Credit") {
-    creditValue = this.amount.value;
+    creditValue = form.amount.value;
   }
+
+  document.getElementById("status").innerText = "Saving transaction...";
 
   fetch("https://script.google.com/macros/s/AKfycbzIJFpP-bIgaZ4h2BfumOIQul758czEQL_91DowkQic3wQx7MzwtDQ6W0B-bPkVUa1YNA/exec", {
     method: "POST",
     body: JSON.stringify({
-      sheetName: this.sheetName.value,
-      date: this.date.value,
-      particulars: this.particulars.value,
+      sheetName: form.sheetName.value,
+      date: form.date.value,
+      particulars: form.particulars.value,
       debit: debitValue,
       credit: creditValue,
-      amount: this.amount.value,
-      remarks: this.remarks.value || ""
+      amount: form.amount.value,
+      remarks: form.remarks.value || ""
     }),
     headers: { "Content-Type": "application/json" }
-  }).then(res => res.json())
+  })
+  .then(res => res.json())
   .then(data => {
     if (data.status === "success") {
-      document.getElementById("status").innerText = "Transaction Saved!";
-      this.reset();
+      document.getElementById("status").style.color = "green";
+      document.getElementById("status").innerText = "✅ Transaction Saved!";
+      form.reset();
     } else {
-      document.getElementById("status").innerText = "Error: " + JSON.stringify(data);
+      throw new Error("Save failed");
     }
-  }).catch(err => {
-    document.getElementById("status").innerText = "Error: " + err;
+  })
+  .catch(err => {
+    document.getElementById("status").style.color = "red";
+    document.getElementById("status").innerText = "❌ Error saving transaction.";
   });
 });
 </script>
